# Youtube-Music-Desktop-app

./: .gitignore  LICENSE  README.md  TERMS.md  THIRD_PARTY_NOTICES.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
backend/supabase/: README.md  config.toml
backend/supabase/functions/feedback/: index.ts
backend/supabase/functions/first-login/: index.ts
backend/supabase/functions/me-data/: index.ts
backend/supabase/functions/signups-open/: index.ts
backend/supabase/functions/whoami/: index.ts
backend/supabase/migrations/: 0001_first_login.sql  0002_signup_cap.sql  0003_dormancy.sql  0004_feedback.sql
docs/: PRIVACY.md  index.html  privacy.html
sidecar/: .env.example  auth.py  data.py  main.py  requirements.txt  storage.py  stream.py  youtube_data.py  youtube_music.py  ytmusic-sidecar.spec
src/: App.css  App.tsx  api.ts  main.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  oauth.rs  ytcookies.rs
